objects/QIDC__MDM_Entity_ims__c.object
<CustomObject>
    <description>This object is used to store entities and relations from MDM Configuration API.</description>
    <fields>
        <fullName>QIDC__Description_ims__c</fullName>
        <description>Description for the entity type.</description>
        <inlineHelpText>Description for the entity type.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__EndObjectTypeURI_ims__c</fullName>
        <description>Defines properties of start object like it&apos;s type</description>
        <inlineHelpText>Defines properties of start object like it&apos;s type</inlineHelpText>
        <label>End Object Type URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__ExtendsTypeURI_ims__c</fullName>
        <description>URI of entity type or a role that is extended by this entity type.
 
Example:
configuration/roles/Party</description>
        <inlineHelpText>URI of entity type or a role that is extended by this entity type.
 
Example:
configuration/roles/Party</inlineHelpText>
        <label>Extends Type URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Label_ims__c</fullName>
        <description>Readable name of the entity type.
 
Example:
Individual</description>
        <inlineHelpText>Readable name of the entity type.
 
Example:
Individual</inlineHelpText>
        <label>Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__ParentEntityTypeURI_ims__c</fullName>
        <description>This field is used to store URI of Parent Entity.</description>
        <inlineHelpText>This field is used to store URI of Parent Entity.</inlineHelpText>
        <label>Parent Entity Type URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__ReferencedEntityTypeURI_ims__c</fullName>
        <description>URI of entity type or role that is referenced from an entity though &apos;ReferencedEntityTypeURI&apos;. This field is applicable only for &apos;Reference&apos; Type entities.</description>
        <inlineHelpText>URI of entity type or role that is referenced from an entity though &apos;ReferencedEntityTypeURI&apos;. This field is applicable only for &apos;Reference&apos; Type entities.</inlineHelpText>
        <label>Referenced Entity Type URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__ReferencedRelationTypeURI_ims__c</fullName>
        <description>URI of relation type that is referenced from an entity though &apos;RelationshipTypeURI&apos;. This field is applicable only for &apos;Reference&apos; Type entities</description>
        <inlineHelpText>URI of relation type that is referenced from an entity though &apos;RelationshipTypeURI&apos;. This field is applicable only for &apos;Reference&apos; Type entities</inlineHelpText>
        <label>Referenced Relation Type URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__StartObjectTypeURI_ims__c</fullName>
        <description>Defines properties of start object like it&apos;s type.</description>
        <inlineHelpText>Defines properties of start object like it&apos;s type.</inlineHelpText>
        <label>Start Object Type URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Type_ims__c</fullName>
        <description>This field is used to determine the type of entity (i.e Relation, Nested, Reference)</description>
        <inlineHelpText>This field is used to determine the type of entity (i.e Relation, Nested, Reference)</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Relation</fullName>
                </value>
                <value>
                    <fullName>Nested</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__URI_ims__c</fullName>
        <description>Path that is used to reach the entity type.
Format: configuration/entityTypes/{EntityTypeName}
 
Example:
configuration/entityTypes/Individual</description>
        <externalId>true</externalId>
        <inlineHelpText>Path that is used to reach the entity type.
Format: configuration/entityTypes/{EntityTypeName}
 
Example:
configuration/entityTypes/Individual</inlineHelpText>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MDM Entity</label>
    <listViews>
        <fullName>MDR_Queue_MDM_Entity_ims</fullName>
        <filterScope>Queue</filterScope>
        <label>MDR Queue</label>
        <queue>MDR_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QIDC__All</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Label_ims__c</columns>
        <columns>QIDC__URI_ims__c</columns>
        <columns>QIDC__ExtendsTypeURI_ims__c</columns>
        <columns>QIDC__StartObjectTypeURI_ims__c</columns>
        <columns>QIDC__EndObjectTypeURI_ims__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QIDC__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM Entities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>